--- a/04 Search/search.html
+++ b/04 Search/search.html
@@ -27,6 +27,9 @@
     </aside>
 
     <main>
+        <!-- The window div is necessasry 
+        so that nav and list div can be on top
+        of each other without causing any issues. -->
         <div class="window">
             <nav>
                 <h3>Hardware Items</h3>
