--- a/05 Games/index.html
+++ b/05 Games/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Room</title>
+    <link rel="icon" href="./images/logo.png">
 </head>
 <link rel="stylesheet" href="./css/reset.css">
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="./css/home.css">
 <link rel="stylesheet" href="./css/mole.css">
+<link rel="stylesheet" href="./css/snake.css">
+<link rel="stylesheet" href="./css/tic.css">
+<link rel="stylesheet" href="./css/history.css">
 <body>
-
+    <th></th>
     <nav class="navbar">
         <ul class="array-items">
             <li class="items" onclick="goHome()">
@@ -59,8 +63,8 @@
         </div>
         <h3 class="message">You can select a game or look at your game history through the menu on the left or below depending on your screen size.</h3>
     </main>
-       
 </body>
+<script src="./js/default.js"></script>
 <script src="./js/home.js"></script>
 <script src="./js/mole.js"></script>
 <script src="./js/snake.js"></script>
