--- a/07-Voice_Recording/home.html
+++ b/07-Voice_Recording/home.html
@@ -27,7 +27,7 @@
     </nav>
 
     <!-- MAIN CONTENT -->
-    <main>
+    <!-- <main>
         <div class="company-home-banner">
             <div class="red-circle-design"></div>
             <div class="company-banner-logo"><img src="./img/lion_logo.png" alt="lion_logo"></div>
@@ -37,10 +37,12 @@
             <div class="company-slogan-title">Home for music</div>
             <div class="company-slogan-main">Music can be a bridge between languages.</div>
         </div>
-    </main>
+    </main> -->
 
     <!-- DESIGN CIRCLES -->
-    <div class="top-right design-circle"></div>
+    <div class="top-right design-circle">
+        <div class="top-right-fill-design-circle"></div>
+    </div>
     <div class="bottom-left design-circle"></div>
 </body>
 </html>
