finished home page

--- a/07-Voice_Recording/home.html
+++ b/07-Voice_Recording/home.html
@@ -27,9 +27,8 @@
     </nav>
 
     <!-- MAIN CONTENT -->
-    <!-- <main>
+    <main class="home-page-main">
         <div class="company-home-banner">
-            <div class="red-circle-design"></div>
             <div class="company-banner-logo"><img src="./img/lion_logo.png" alt="lion_logo"></div>
             <div class="company-banner-text">Lion Records</div>
         </div>
@@ -37,7 +36,7 @@
             <div class="company-slogan-title">Home for music</div>
             <div class="company-slogan-main">Music can be a bridge between languages.</div>
         </div>
-    </main> -->
+    </main>
 
     <!-- DESIGN CIRCLES -->
     <div class="top-right design-circle">
@@ -46,5 +45,6 @@
     <div class="bottom-left design-circle">
         <div class="bottom-left-fill-design-circle"></div>
     </div>
+    
 </body>
 </html>
