--- a/07-Voice_Recording/record.html
+++ b/07-Voice_Recording/record.html
@@ -9,21 +9,30 @@
     <title>Recording</title>
 </head>
 <body>
+
     <!-- HEADER NAV -->
     <nav class="header-nav">
         <a class="logo-home" href="./home.html">
             <div class="logo-image-container">
                 <img src="./img/lion_logo.png" class="logo-image" alt="logo of lion records">
             </div>
-            <div class="logo-name">
+            <div class="logo-name nav-transition">
                 Lion R.
             </div>
         </a>
         <ul class="nav-list-links">
-            <li class="nav-list"><a class="nav-links" href="./home.html">Home</a></li>
-            <li class="nav-list"><a class="nav-links" href="./record.html">Record</a></li>
+            <li class="nav-list nav-transition"><a class="nav-link" href="./home.html">Home</a></li>
+            <li class="nav-list"><a class="nav-link nav-transition" href="./record.html">Record</a></li>
         </ul>
     </nav>
+
+    <div class="top-right design-circle">
+        <div class="top-right-fill-design-circle"></div>
+    </div>
+    <div class="bottom-left design-circle">
+        <div class="bottom-left-fill-design-circle"></div>
+    </div>
+
 </body>
 
 </html>
