made homepage screen friendly

--- a/07-Voice_Recording/home.html
+++ b/07-Voice_Recording/home.html
@@ -42,8 +42,8 @@
     <div class="top-right design-circle">
         <div class="top-right-fill-design-circle"></div>
     </div>
-    <div class="bottom-left design-circle">
-        <div class="bottom-left-fill-design-circle"></div>
+    <div class="bottom-right design-circle">
+        <div class="bottom-right-fill-design-circle"></div>
     </div>
     
 </body>
