--- a/07-Voice_Recording/record.html
+++ b/07-Voice_Recording/record.html
@@ -26,11 +26,14 @@
         </ul>
     </nav>
 
+    <audio id="" src="./welcome-record.m4a" type="audio/m4a"></audio>
+
+    <!-- DESIGN CIRCLES -->
     <div class="top-right design-circle">
         <div class="top-right-fill-design-circle"></div>
     </div>
-    <div class="bottom-left design-circle">
-        <div class="bottom-left-fill-design-circle"></div>
+    <div class="bottom-right design-circle">
+        <div class="bottom-right-fill-design-circle"></div>
     </div>
 
 </body>
