recording page html and css 90% complete

--- a/07-Voice_Recording/record.html
+++ b/07-Voice_Recording/record.html
@@ -38,35 +38,35 @@
 
         <div class="audio-main-controls">
             <div class="control" id="downloadRecord">
-                <img src="./img/controls/download-record.png" alt="download recording">
+                <img class="img-control" src="./img/controls/download-record.png" alt="download recording">
             </div>
 
-            <div class="control" id="stopRecording">
+            <div class="control hide-feature" id="stopRecording">
                 <div class="stop-record-symbol"></div>
             </div>
  
-            <div class="control" id="stopAudio">
+            <div class="control hide-feature" id="stopAudio">
                 <div class="stop-record-symbol"></div>
             </div>
 
-            <div class="control no-border" id="playAudio">
-                <img src="./img/controls/play_button.svg" alt="play recording">
-            </div>
-
             <div class="control" id="startRecording">
-                <img src="./img/controls/record-button.png" alt="start recording">
+                <img class="img-control" src="./img/controls/record-button.png" alt="start recording">
             </div>
 
-            <div class="control" id="pauseRecording">
-                <img src="./img/controls/pause_button.svg" alt="pause recording">
+            <div class="control" id="playAudio">
+                <img class="img-control" src="./img/controls/play_button.svg" alt="play recording">
+            </div>
+            
+            <div class="control hide-feature" id="pauseRecording">
+                <img class="img-control" src="./img/controls/pause_button.svg" alt="pause recording">
             </div>
 
-            <div class="control" id="pauseAudio">
-                <img src="./img/controls/pause_button.svg" alt="pause playing">
+            <div class="control hide-feature" id="pauseAudio">
+                <img class="img-control" src="./img/controls/pause_button.svg" alt="pause playing">
             </div>
 
-            <div class="control" id="restartAudio">
-                <img src="./img/controls/refresh_button.svg" alt="restart audio">
+            <div class="control hide-feature" id="restartAudio">
+                <img class="img-control" src="./img/controls/refresh_button.svg" alt="restart audio">
             </div>
         </div>
     </main>
