--- a/07-Voice_Recording/record.html
+++ b/07-Voice_Recording/record.html
@@ -33,7 +33,7 @@
         <div class="audio-main-container">
             <div id="audio-wave-form"></div>
             <div class="hide" id="audio-bar-form"></div>
-            <audio id="pre-recorded-audio" src="./welcome-record.m4a" type="audio/m4a"></audio>
+            <audio id="recorded-audio" src="./recording.mp3" type="audio/m4a"></audio>
         </div>
 
         <div class="audio-main-controls">
