--- a/07-Voice_Recording/record.html
+++ b/07-Voice_Recording/record.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/record.css">
-    <script src="https://unpkg.com/wavesurfer.js"></script>
-    <script src="./js/main.js" defer></script>
+    <script src="./js/main.js" defer type="module"></script>
     <title>Recording</title>
 </head>
 <body>
