audio visual part 1 done

--- a/07-Voice_Recording/record.html
+++ b/07-Voice_Recording/record.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/record.css">
-    <script src="https://cdn.jsdelivr.net/gh/foobar404/wave.js/dist/bundle.iife.js"></script>
+    <script src="https://unpkg.com/wavesurfer.js"></script>
     <script src="./js/audio_player.js" defer></script>
     <script src="./js/recorder.js" defer></script>
     <title>Recording</title>
@@ -32,10 +32,10 @@
     <main class="audio-main">
 
         <div class="audio-main-container">
-            <canvas id="audio-wave-form" style="width: 100%;
-        height: 150px;"></canvas>
-            <canvas class="hide" id="audio-bar-form" style="width: 100%;
-        height: 150px;"></canvas>
+            <div class="audio-visual" id="audio-wave-form" style="width: 100%;
+        height: 150px;"></div>
+            <div class="hide-feature audio-visual" id="audio-bar-form" style="width: 100%;
+        height: 150px;"></div>
             <audio id="first-audio" src="./recording.mp3" type="audio/m4a"></audio>
         </div>
 
