finished the recording function also the download function && last part to finish this project is the recording visuals

--- a/07-Voice_Recording/record.html
+++ b/07-Voice_Recording/record.html
@@ -59,6 +59,10 @@
             <div class="control" id="playAudio">
                 <img class="img-control" src="./img/controls/play_button.svg" alt="play recording">
             </div>
+
+            <div class="control hide-feature" id="playRecording">
+                <img class="img-control" src="./img/controls/play_button.svg" alt="play recording">
+            </div>
             
             <div class="control hide-feature" id="pauseRecording">
                 <img class="img-control" src="./img/controls/pause_button.svg" alt="pause recording">
